--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
     "node-lifx-lan": "^0.3.1"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "start:debug": "node --inspect-brk=0.0.0.0 index.js"
   }
 }
