--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,12 @@
     "node-lifx-lan": "^0.3.1"
   },
   "scripts": {
-    "start": "node index.js",
-    "start:debug": "node --inspect-brk=0.0.0.0 index.js"
+    "start": "./scripts/start.sh",
+    "start:debug": "yarn start --inspect-brk",
+    "start:watch": "nodemon"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.10",
+    "typescript": "^3.3.3"
   }
 }
