--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "./scripts/start.sh",
     "start:debug": "yarn start --inspect-brk",
-    "start:watch": "nodemon"
+    "start:watch": "nodemon -L"
   },
   "devDependencies": {
     "nodemon": "^1.18.10",
