Add migration package.

--- a/package.json
+++ b/package.json
@@ -10,5 +10,6 @@
     "start": "./scripts/start.sh",
     "start:debug": "./scripts/debug.sh",
     "start:watch": "./scripts/watch.sh"
-  }
+  },
+  "dependencies": {}
 }
