--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,15 @@
 {
   "private": true,
   "dependencies": {
-    "node-lifx-lan": "^0.3.1"
+    "node-lifx-lan": "^0.3.1",
+    "node-pg-migrate": "^3.16.0",
+    "pg": "^7.8.0"
   },
   "scripts": {
     "start": "./scripts/start.sh",
     "start:debug": "yarn start --inspect-brk",
-    "start:watch": "nodemon -L"
+    "start:watch": "nodemon -L",
+    "migrate": "node-pg-migrate"
   },
   "devDependencies": {
     "nodemon": "^1.18.10",
