--- a/docker-compose.watch.yml
+++ b/docker-compose.watch.yml
@@ -1,11 +1,17 @@
-version: "3.1"
+version: "3.4"
 
 services:
   server:
     image: node:alpine
     environment:
-      - DATABASE_URL=postgres://postgres@0.0.0.0/postgres
+      - DATABASE_URL=postgres://postgres:postgres@db:5432/postgres
     volumes:
       - ./server:/usr/app
     working_dir: /usr/app
     command: sh -c "yarn && yarn start:watch"
+    build:
+      context: ./server
+      network: host
+    ports:
+      - 56700:56700
+    network_mode: host
