--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "dependencies": {
-    "node-lifx-lan": "^0.3.1",
+    "node-lifx": "^0.8.0",
     "node-pg-migrate": "^3.16.0",
     "pg": "^7.8.0"
   },
