--- a/lerna.json
+++ b/lerna.json
@@ -1,8 +1,5 @@
 {
-  "packages": [
-    "client",
-    "server"
-  ],
+  "packages": ["client", "server", "database"],
   "version": "0.0.0",
   "npmClient": "yarn"
 }
