--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,6 @@
 {
   "private": true,
-  "dependencies": {
-    "node-lifx-lan": "^0.3.1"
-  },
+  "dependencies": {},
   "scripts": {
     "start": "./scripts/start.sh",
     "start:debug": "yarn start --inspect-brk",
