--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
   server:
     image: node:alpine
     volumes:
-      - ./server:/usr/app
+      - ./services/server:/usr/app
     working_dir: /usr/app
     depends_on:
       - db
