--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -7,5 +7,10 @@ services:
 
   server:
     ports:
+      - "9230:9230"
+    command: sh -c "yarn && yarn start --inspect=0.0.0.0:9230"
+
+  discovery-service:
+    ports:
       - "9229:9229"
-    command: sh -c "yarn && yarn start --inspect-brk=0.0.0.0"
+    command: sh -c "yarn && yarn start --inspect-brk=0.0.0.0:9229"
