--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -8,7 +8,7 @@ services:
   server:
     ports:
       - "9230:9230"
-    command: sh -c "yarn && yarn start --inspect=0.0.0.0:9230"
+    command: sh -c "yarn && yarn start --inspect-brk=0.0.0.0:9230"
 
   discovery-service:
     ports:
