--- a/services/database/package.json
+++ b/services/database/package.json
@@ -3,8 +3,5 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "dependencies": {
-    "db-migrate": "^0.11.5",
-    "pg": "^7.8.0"
-  }
+  "dependencies": {}
 }
