Add knex to correct package.
Add basic commands.

--- a/services/database/package.json
+++ b/services/database/package.json
@@ -3,5 +3,18 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "dependencies": {}
+  "dependencies": {
+    "@types/knex": "^0.15.2",
+    "@types/node": "^11.9.3",
+    "@types/wait-on": "^3.2.0",
+    "knex": "0.16.3",
+    "pg": "7.8.0",
+    "wait-on": "^3.2.0"
+  },
+  "scripts": {
+    "migrate-up": "knex migrate:latest",
+    "migrate-down": "knex migrate:rollback",
+    "create-migration": "knex migrate:make",
+    "start": "node index.js"
+  }
 }
