--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
     "start": "./scripts/start.sh",
     "start:debug": "./scripts/debug.sh",
     "start:watch": "./scripts/watch.sh"
+  },
+  "dependencies": {
+    "knex": "^0.16.3",
+    "pg": "^7.8.0"
   }
 }
