--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,11 +10,16 @@ services:
 
   migrations:
     image: node:alpine
+    restart: on-failure
     volumes:
       - ./services/database:/usr/app
+    working_dir: /usr/app
     environment:
       - POSTGRES_USER=admin
       - "POSTGRES_PASSWORD=${POSTGRES_PASSWORD}"
+      - DB_ADDRESS=db
+      - DB_PORT=5432
+    command: sh -c "yarn && yarn start"
     depends_on:
       - db
 
