--- a/services/server/package.json
+++ b/services/server/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "api",
+  "name": "server",
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "node-lifx": "^0.8.0"
+  },
   "scripts": {
     "start": "./scripts/start.sh",
     "start:debug": "yarn start --inspect-brk",
