--- a/services/database/package.json
+++ b/services/database/package.json
@@ -6,10 +6,10 @@
   "dependencies": {
     "knex": "0.16.3",
     "pg": "7.8.0",
+    "typescript": "^3.3.3",
     "wait-on": "^3.2.0"
   },
   "devDependencies": {
-    "@types/knex": "^0.15.2",
     "@types/node": "^11.9.3",
     "@types/wait-on": "^3.2.0",
     "nodemon": "^1.18.10"
