--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -7,10 +7,11 @@ services:
 
   migrations:
     ports:
-      - "9230:9230"
-    command: sh -c "yarn && yarn start --inspect-brk=0.0.0.0:9230"
+      - 9230:9230
+      - 5442:5442
+    command: sh -c "yarn && yarn start --inspect=0.0.0.0:9230"
 
   server:
     ports:
-      - "9229:9229"
+      - 9229:9229
     command: sh -c "yarn && yarn start --inspect=0.0.0.0:9229"
