--- a/services/database/package.json
+++ b/services/database/package.json
@@ -4,12 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.16.4",
     "knex": "0.16.3",
     "pg": "7.8.0",
+    "sql-template-strings": "^2.2.2",
     "typescript": "^3.3.3",
     "wait-on": "^3.2.0"
   },
   "devDependencies": {
+    "@types/express": "^4.16.1",
     "@types/node": "^11.9.3",
     "@types/wait-on": "^3.2.0",
     "nodemon": "^1.18.10"
