--- a/services/migrations/package.json
+++ b/services/migrations/package.json
@@ -7,7 +7,6 @@
     "express": "^4.16.4",
     "knex": "0.16.3",
     "pg": "7.8.0",
-    "sql-template-strings": "^2.2.2",
     "typescript": "^3.3.3",
     "wait-on": "^3.2.0"
   },
@@ -22,7 +21,6 @@
     "migrate-down": "knex migrate:rollback",
     "create-migration": "knex migrate:make",
     "start": "./scripts/start.sh",
-    "start:watch": "nodemon -L",
-    "start:debug": "yarn start --inspect-brk"
+    "start:watch": "nodemon -L"
   }
 }
