--- a/services/migrations/package.json
+++ b/services/migrations/package.json
@@ -12,15 +12,19 @@
   },
   "devDependencies": {
     "@types/express": "^4.16.1",
+    "@types/jest": "^24.0.5",
     "@types/node": "^11.9.3",
     "@types/wait-on": "^3.2.0",
-    "nodemon": "^1.18.10"
+    "jest": "^23.1.0",
+    "nodemon": "^1.18.10",
+    "ts-jest": "^23.10.5"
   },
   "scripts": {
     "migrate-up": "knex migrate:latest",
     "migrate-down": "knex migrate:rollback",
     "create-migration": "knex migrate:make",
     "start": "./scripts/start.sh",
-    "start:dev": "nodemon -L"
+    "start:dev": "nodemon -L",
+    "test": "jest --watch"
   }
 }
