--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     image: postgres
     restart: always
     environment:
-      - POSTGRES_USER=admin
-      - "POSTGRES_PASSWORD=${POSTGRES_PASSWORD}"
+      - "POSTGRES_USER=${POSTGRES_ADMIN_USER}"
+      - "POSTGRES_PASSWORD=${POSTGRES_ADMIN_PASSWORD}"
 
   migrations:
     image: node:alpine
@@ -17,11 +17,13 @@ services:
 
     working_dir: /usr/app
     environment:
-      - POSTGRES_USER=admin
-      - "POSTGRES_PASSWORD=${POSTGRES_PASSWORD}"
-      - DB_ADDRESS=db
-      - DB_PORT=5432
+      - "ADMIN_USER=${POSTGRES_ADMIN_USER}"
+      - "ADMIN_PASSWORD=${POSTGRES_ADMIN_PASSWORD}"
+      - DATABASE_ADDRESS=db
+      - DATABASE_PORT=5432
       - API_PORT=5442
+      - DATABASE=postgres
+
     command: sh -c "yarn && yarn start"
     depends_on:
       - db
