--- a/services/migrations/package.json
+++ b/services/migrations/package.json
@@ -7,6 +7,7 @@
     "express": "^4.16.4",
     "knex": "0.16.3",
     "pg": "7.8.0",
+    "ts-node": "^8.0.2",
     "typescript": "^3.3.3",
     "wait-on": "^3.2.0"
   },
