--- a/services/migrations/package.json
+++ b/services/migrations/package.json
@@ -14,6 +14,7 @@
     "@types/express": "^4.16.1",
     "@types/jest": "^24.0.5",
     "@types/node": "^11.9.3",
+    "@types/pg": "^7.4.13",
     "@types/wait-on": "^3.2.0",
     "jest": "^23.1.0",
     "nodemon": "^1.18.10",
@@ -22,7 +23,7 @@
   },
   "scripts": {
     "migration:create": "ts-node ./src/commands/migration-create.ts",
-    "migrate:up": "",
+    "migrate:up": "ts-node ./src/commands/migration-up.ts",
     "start": "./scripts/start.sh",
     "start:dev": "nodemon -L",
     "test": "jest --watch"
